syntax = "proto3" ;
package msg ;

option go_package = "github.com/adithyabhatkajake/libsynchs/msg" ;

// import "msg/cert.proto" ;

message ProtoVoteBody {
    uint64 Voter = 1 ;
    bytes Signature = 2 ;
}

message ProtoVote {
    ProtoVoteData Data = 1 ;
    ProtoVoteBody Body = 2 ;
}

// VoteData are the parts that are independent of the voter
message ProtoVoteData {
    bytes BlockHash = 1 ; // Bk
    uint64 View = 2 ; // v
}

// message BlockCertificate {
// 	msg.Certificate BCert = 1 ;
//     VoteData Data = 2 ;
// }